css update for nav btn reduce margin from 200px causing issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
   width: fit-content;
 }
 .createBtn{
-  margin-right: 200px;
+  margin-right: 30px;
 }
 :root {
   --primary: #1aac83;
